unpackaged/main/default/objects/Assisted_Sales__c/Assisted_Sales__c.object-meta.xml
<CustomObject>
    <description>Assisted sales by team members for a customer based on sales from a specific store.</description>
    <label>Assisted Sale</label>
    <nameField>
        <displayFormat>Sale-{0000000}</displayFormat>
        <label>Assisted Sales Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assisted Sales</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>