unpackaged/main/default/objects/Assisted_Sales__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assisted Sales</relationshipLabel>
    <relationshipName>Assisted_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>