unpackaged/main/default/objects/Assisted_Sales__c/fields/Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approval_Comments__c</fullName>
    <description>Approval Comments for Assisted Sales</description>
    <label>Approval Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>