unpackaged/main/default/objects/Assisted_Sales__c/recordTypes/Category_Assist.recordType-meta.xml
<RecordType>
    <fullName>Category_Assist</fullName>
    <active>true</active>
    <description>Category Assist</description>
    <label>Category Assist</label>
</RecordType>