unpackaged/main/default/objects/Assisted_Sales__c/recordTypes/Store_Assist.recordType-meta.xml
<RecordType>
    <fullName>Store_Assist</fullName>
    <active>true</active>
    <description>Store Assist</description>
    <label>Store Assist</label>
</RecordType>