unpackaged/main/default/objects/Assisted_Sales__c/validationRules/Assisted_Sale_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Assisted_Sale_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	NOT(CONTAINS($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.Assisted_Sale_Profile_Access__c , $Profile.Name)),  
	$User.Id != Account__r.OwnerId
)</errorConditionFormula>
    <errorMessage>Only an account owner, ASM or higher can create or edit this record</errorMessage>
</ValidationRule>