unpackaged/main/default/objects/Assisted_Sales__c/validationRules/Make_user_mandator.validationRule-meta.xml
<ValidationRule>
    <fullName>Make_user_mandator</fullName>
    <active>true</active>
    <description>Make user field mandatory as this cannot be made master detail</description>
    <errorConditionFormula>ISNULL(Team_Member__c) || ISBLANK(Team_Member__c)</errorConditionFormula>
    <errorDisplayField>Team_Member__c</errorDisplayField>
    <errorMessage>Cannot be left blank</errorMessage>
</ValidationRule>